syntax = "proto3";

package  socialmedia;
option java_multiple_files = true;
option java_outer_classname = "SocialMediaProto";
option java_package = "com.room.grpc.socialmedia";

service PostService {
    rpc fetchPostList (PostListRequest) returns (PostListResponse);
}

message PostListRequest {
    int32 page = 1;
    int32 size = 2;
}

message PostMessage {
    string id = 1;
    string captions = 2;
    int32 count = 3; 
}

message PostListResponse {
    repeated PostMessage posts = 1;
}